# listening_learning_app

./: .gitignore  README.md  chat.py  pyproject.toml  structured_data.py  transcriber.py  vector_store.py
frontend/: backend_client.py  utils.py  window.py
